cheatsheet/step1/app1-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1-route
  namespace: app-networking
spec:
  parentRefs:
  - name: app-gateway
    namespace: app-networking
    sectionName: https-listener
  hostnames:
  - "app1.omerfagc-01.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app1
      namespace: app1
      port: 80
