cheatsheet/step1/app2-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-route
  namespace: app-networking
spec:
  parentRefs:
  - name: app-gateway
    namespace: app-networking
    sectionName: http-listener
  hostnames:
  - "app2.your-domain.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: app2
      namespace: app2
      port: 80
